--- a/html/fees.html
+++ b/html/fees.html
@@ -198,7 +198,7 @@
       <p class="my-10 leading-6">
         You are cordially invited to contribute an abstract to the upcoming
         Emerging Trends in Earth Sciences(ETES)-2024 conference at the
-        Department of Geophysics, IIT ISM, Dhanbad, from Sept. 27 to 29, 2024.
+        Department of Geophysics, IIT ISM, Dhanbad, from Sept. 27 to 29, 2024. Accommodation will be available within IIT(ISM) Guest house with reasonable rates.
       </p>
 
       <div class="relative overflow-x-auto shadow-xl sm:rounded-lg">
@@ -210,11 +210,11 @@
               </th>
               <th scope="col" class="px-6 py-3">
                 Early Bird Rates (01 delegate)<br />
-                <span class="text-sm">(Till 26th August, 2024) </span>
+                <span class="text-sm">(Till 6th September, 2024) </span>
               </th>
               <th scope="col" class="px-6 py-3 bg-gray-50 text-[#6F8F72]">
                 Standard Rates (01 delegate)<br />
-                <span class="text-sm">(After 26th August, 2024) </span>
+                <span class="text-sm">(After 6th September, 2024) </span>
               </th>
               <th scope="col" class="px-6 py-3"></th>
             </tr>
