--- a/html/committee.html
+++ b/html/committee.html
@@ -1439,8 +1439,8 @@
                   <p
                     class="hover:underline ml-5 text-white font-normal text-sm"
                   >
-                  agp.etes2024@gmail.com
-                  </p>
+                  etes2024@iitism.ac.in                  
+                </p>
                 </li>
                 <li class="relative flex justify-center">
                   <ion-icon
