--- a/html/contact.html
+++ b/html/contact.html
@@ -209,7 +209,7 @@
         Phone : +91-326-2235949 ; M: +91-9471191852
       </h1>
       <h1 class="text-3xl font-bold flex justify-center items-center my-5">
-        Email : agp.etes2024@gmail.com, agp@iitism.ac.in
+        Email : etes2024@iitism.ac.in, agp@iitism.ac.in
       </h1>
       <h1 class="text-2xl font-bold flex justify-center items-center mt-15">
         Treasurer - Dr. Partha Pratim Mandal
@@ -256,7 +256,7 @@
                   <p
                     class="hover:underline ml-5 text-white font-normal text-sm"
                   >
-                  agp.etes2024@gmail.com
+                  etes2024@iitism.ac.in
                   </p>
                 </li>
                 <li class="relative flex justify-center">
