--- a/html/fees.html
+++ b/html/fees.html
@@ -355,7 +355,7 @@
                   <p
                     class="hover:underline ml-5 text-white font-normal text-sm"
                   >
-                  agp.etes2024@gmail.com
+                  etes2024@iitism.ac.in
                   </p>
                 </li>
                 <li class="relative flex justify-center">
