--- a/html/homepage.html
+++ b/html/homepage.html
@@ -330,7 +330,7 @@
               class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white"
             ></div>
             <time class="mb-1 text-sm font-normal leading-none text-gray-500"
-              >6 September 2024</time
+              >10 September 2024</time
             >
             <h3 class="text-lg font-semibold">Acceptance of abstract</h3>
           </li>
@@ -388,7 +388,7 @@
                   <p
                     class="hover:underline ml-5 text-white font-normal text-sm"
                   >
-                  agp.etes2024@gmail.com
+                  etes2024@iitism.ac.in
                   </p>
                 </li>
                 <li class="relative flex justify-center">
