--- a/html/template.html
+++ b/html/template.html
@@ -168,7 +168,7 @@
                   <p
                     class="hover:underline ml-5 text-white font-normal text-sm"
                   >
-                  agp.etes2024@gmail.com
+                  etes2024@iitism.ac.in
                   </p>
                 </li>
                 <li class="relative flex justify-start">
