--- a/html/homepage.html
+++ b/html/homepage.html
@@ -259,6 +259,9 @@
         <li class="px-2 py-2">
           Geoscientific techniques in delineating archeological heritages
         </li>
+        <li class="px-2 py-2">
+          Advances in geospatial technologies
+        </li>
       </ul>
     </div>
     <div class="my-10 mx-10 text-[#6F8F72]">
@@ -319,7 +322,7 @@
               class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white"
             ></div>
             <time class="mb-1 text-sm font-normal leading-none text-gray-500"
-              >6 September 2024</time
+              >10 September 2024</time
             >
             <h3 class="text-lg font-semibold">
               Last date for early bird registration
@@ -330,7 +333,7 @@
               class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white"
             ></div>
             <time class="mb-1 text-sm font-normal leading-none text-gray-500"
-              >10 September 2024</time
+              >8 September 2024</time
             >
             <h3 class="text-lg font-semibold">Acceptance of abstract</h3>
           </li>
