--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <script>
-      window.location = "/html/homepage.html";
+      window.location = "./html/homepage.html";
     </script>
   </body>
 </html>
