--- a/html/homepage.html
+++ b/html/homepage.html
@@ -199,7 +199,7 @@
 
         <span class=" text-black font-bold px-2 py-1 mr-3">
           
-          NEW! Advances in Geospatial Technologies
+          Conference is organised as part of centenary celebration of IIT(ISM) Dhanbad
         </span>
         <!-- Main Text -->
         <span class="text-xl font-semibold">
@@ -226,7 +226,7 @@
         .marquee span {
             display: inline-block;
             padding-left: 50%; /* Reduced padding-left */
-            animation: marquee 8s linear infinite; /* Shorter animation duration */
+            animation: marquee 11s linear infinite; /* Shorter animation duration */
         }
   </style>
       <h1 class="text-3xl font-bold my-15">Objective of the Conference</h1>
