--- a/html/register.html
+++ b/html/register.html
@@ -204,15 +204,30 @@
           Guidelines
         </a>
       </p>
-      <p class="flex mt-5 justify-center">
-        <a
-          href="https://eps.eshiksa.net/DirectFeesv3/IIT_Dhanbad/index"
-          target="_blank"
-          type="button"
-          class="w-[20vw] bg-gradient-to-r from-lime-300 via-lime-500 to-lime-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-lime-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center text-white me-2 mb-2"
-        >
-          Pay
-        </a>
+      <p class="my-10 leading-6">
+        Kindly find the payment methods below. Please comment ETES-24 while paying with QR code.
+      </p>
+      <div class="flex justify-around items-center">
+        <p class="flex mt-5 justify-center">
+          <a
+            href="https://eps.eshiksa.net/DirectFeesv3/IIT_Dhanbad/index"
+            target="_blank"
+            type="button"
+            class="w-[20vw] bg-gradient-to-r from-lime-300 via-lime-500 to-lime-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-lime-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center text-white me-2 mb-2"
+          >
+            Pay through portal
+          </a>
+          <p class="flex mt-5 justify-center">
+            <a
+              href="https://res.cloudinary.com/dfr1kvie3/image/upload/v1725976699/WhatsApp_Image_2024-09-10_at_19.14.02_u8kic1.jpg"
+              target="_blank"
+              type="button"
+              class="w-[20vw] bg-gradient-to-r from-lime-300 via-lime-500 to-lime-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-lime-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center text-white me-2 mb-2"
+            >
+              Pay with QR code
+            </a>
+      </div>
+      
       </p>
     </div>
     <div class="my-10 mx-10 text-[#6F8F72]">
